Fix hover actions icons vertical alignment

--- a/src/plugins/presentation_panel/public/panel_component/_presentation_panel.scss
+++ b/src/plugins/presentation_panel/public/panel_component/_presentation_panel.scss
@@ -189,7 +189,7 @@
 
   .embPanel__hoverActions {
     opacity: 0;
-    padding: $euiSizeXS;
+    padding: calc($euiSizeXS - 1px);
     display: flex;
     flex-wrap: nowrap;
     border: $euiBorderThin;
